# nmr-for-pandas

./: .gitignore  Examples.ipynb  README.md  index.html  mkdocs.yml  nmr_to_df.py  nmr_to_pandas.py  pyproject.toml
.ipynb_checkpoints/: Examples-checkpoint.ipynb
docs/: index.md  install.md
install/: index.html
nmr_for_pandas/: cli.py  nmr_to_pandas.py
nmr_for_pandas/.ipynb_checkpoints/: Examples-checkpoint.ipynb
search/: search_index.json
