[tool.poetry]
name = "nmr-for-pandas"
version = "0.1.0"
description = ""
authors = ["Jacob Brady <jacob.brady@protonmail.com>"]
readme = "README.md"
packages = [{include = "nmr_for_pandas"}]

[tool.poetry.dependencies]
python = "3.9.16"
pandas = "^1.5.3"
numpy = "^1.24.2"
rich = "^13.3.1"
jupyter = "^1.0.0"
matplotlib = "^3.6.3"
nmrglue = "^0.9"
scikit-image = "^0.19.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mkdocs-material = "^9.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
